# ordinary-meaning

./: .gitignore  HOW-IT-WORKS.md  README.md  app.py  display.py  extract.py  input.md  paper-experiment-section.md  prepare.py  program.md  pyproject.toml  requirements.txt  run.py  strategies.py  train.py
